iapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetesReverseproxy: '{"hosts": [{"host": "www.iapp.eu", "port": "80"}]}'
  name: www-iapp-svc
  namespace: iapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: www-iapp
  sessionAffinity: None
  type: ClusterIP
